# template-microsvc-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: CI-CD-inventory.yaml  CI-CD-orders.yaml
inventory/: pyproject.toml
inventory/inventory/: models.py
inventory/tests/: test_inventory_models.py
orders/: pyproject.toml
