[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = ["piwero <piwero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0-post.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.0"
pytest = "^7.4.3"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E","F","I"]
ignore = ["E501",]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "**/migrations",
    "settings.py"
	]
line-length = 120