[tool.poetry]
name = "orders"
version = "0.1.0"
description = ""
authors = ["piwero <piwero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.7.0"
pytest = "^8.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
